@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2022-10-26T08:24:28Z",
-  "count_outdated" : 3,
-  "uniques_outdated" : 3,
-  "count" : 4,
-  "uniques" : 4,
+  "timestamp" : "2022-11-05T16:23:10Z",
+  "count_outdated" : 4,
+  "uniques_outdated" : 4,
+  "count" : 5,
+  "uniques" : 5,
   "clones" : [
     {
-      "timestamp": "2022-10-22T00:00:00Z",
+      "timestamp": "2022-11-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
